--- a/Layout1/index.html
+++ b/Layout1/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>HTML Review Layout 1</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div>
