--- a/Layout3/index3.html
+++ b/Layout3/index3.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>HTML Review Layout 3</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
